# imagespec-fast-builder

./: LICENSE.txt  Makefile  README.md  pyproject.toml
.github/workflows/: wheel.yaml
dockerfiles/: Dockerfile  Dockerfile.base  Dockerfile.mamba
experiments/: build_cuda.py  build_wf.py  check_builder.py  simple.py  try_commands.py  try_git.py
src/flytekitplugins_fast_builder/: __about__.py  __init__.py  _image_builder.py
src/imagespec_fast_builder/: _image_builder.py
